hyperv-kubespray-lab/clusters/argo/system/argocd_http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-route
  namespace: argo-system
spec:
  parentRefs:
    - name: public-gateway
      namespace: kgateway-system
      sectionName: http
  hostnames:
    - "argocd.local"
  rules:
    - backendRefs:
        - name: argo-cd-argocd-server
          port: 80
